[gd_scene load_steps=14 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/tanks/tankBlue.png" type="Texture" id=2]
[ext_resource path="res://assets/explosion/explos_03.png" type="Texture" id=3]
[ext_resource path="res://assets/explosion/explos_01.png" type="Texture" id=4]
[ext_resource path="res://assets/explosion/explos_02.png" type="Texture" id=5]
[ext_resource path="res://assets/explosion/explos_05.png" type="Texture" id=6]
[ext_resource path="res://assets/explosion/explos_04.png" type="Texture" id=7]
[ext_resource path="res://assets/fonts/Dimbo Regular.ttf" type="DynamicFontData" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.5762, 18.5183 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.0965, 18.9642 )

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( -17.5288, -17.4608, -16.9985, -18.8751, 16.324, -18.7867, 17.3846, -17.726, 17.473, 17.099, 16.6775, 18.248, -16.4681, 18.248, -17.6172, 17.2758 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "explode",
"speed": 11.0
} ]

[sub_resource type="DynamicFont" id=5]
size = 18
outline_size = 2
outline_color = Color( 0.156863, 0.156863, 0.156863, 1 )
font_data = ExtResource( 8 )

[node name="Enemy" type="KinematicBody2D" groups=[
"enemies",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.222977 )
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -0.0743217, -0.148651 )
shape = SubResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 3 )

[node name="Explosion" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -1.19055, -0.396851 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 4 )
animation = "explode"

[node name="NameLabel" type="Label" parent="."]
margin_left = -19.799
margin_top = -40.1743
margin_right = 20.201
margin_bottom = -18.1743
custom_fonts/font = SubResource( 5 )
text = "name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_Explosion_animation_finished"]
